@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<form method="POST" name="snd" action="50-form2.html">
+<form id="snd" method="POST" name="snd" action="50-form2.html">
 <input type="hidden" name="id" value="23">
 <table id="send_select" class="send_res" cellpadding="1" cellspacing="1"><tr>
 		<td class="ico">
