@@ -1,6 +1,7 @@
 To be released
     . ->submit() returns a true value now
     . added another test
+    . Add test and fix bug in ->form_with_fields, which never worked
 
 0.17 20100426
     . Don't only request nsiHttpChannel, also use it instead of $request
